--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -54,9 +54,6 @@
 % Captions will be left justified
 \usepackage[aboveskip=1pt,labelfont=bf,labelsep=period,justification=raggedright,singlelinecheck=off]{caption}
 
-% Use the PLoS provided BiBTeX style
-%\bibliographystyle{plos2015}
-
 % Bib stuff
 \usepackage{natbib}
 
@@ -1339,7 +1336,7 @@ where
 
 
 \bibliographystyle{abbrvnat}
-\bibliography{noah_bib}
+\bibliography{hillclimbing}
 % Command: pdflatex hillclimbing.tex; bibtex hillclimbing; pdflatex hillclimbing.tex
 \end{document}
 
