--- a/paper/hillclimbing.bib
+++ b/paper/hillclimbing.bib
@@ -69,3 +69,70 @@
   publisher={National Acad Sciences}
 }
 
+@book{tsybakov2008introduction,
+  title={Introduction to Nonparametric Estimation},
+  author={Tsybakov, A.B.},
+  isbn={9780387790527},
+  lccn={2008939894},
+  series={Springer Series in Statistics},
+  url={https://books.google.com/books?id=mwB8rUBsbqoC},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{wahba1981spline,
+  title={Spline interpolation and smoothing on the sphere},
+  author={Wahba, Grace},
+  journal={SIAM Journal on Scientific and Statistical Computing},
+  volume={2},
+  number={1},
+  pages={5--16},
+  year={1981},
+  publisher={SIAM}
+}
+
+cle{donoho1994ideal,
+  title={Ideal spatial adaptation by wavelet shrinkage},
+  author={Donoho, David L and Johnstone, Jain M},
+  journal={Biometrika},
+  volume={81},
+  number={3},
+  pages={425--455},
+  year={1994},
+  publisher={Biometrika Trust}
+}
+
+@article{mammen1997locally,
+  title={Locally adaptive regression splines},
+  author={Mammen, Enno and van de Geer, Sara and others},
+  journal={The Annals of Statistics},
+  volume={25},
+  number={1},
+  pages={387--413},
+  year={1997},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{kim2009ell_1,
+  title={$\backslash$ell\_1 Trend Filtering},
+  author={Kim, Seung-Jean and Koh, Kwangmoo and Boyd, Stephen and Gorinevsky, Dimitry},
+  journal={SIAM review},
+  volume={51},
+  number={2},
+  pages={339--360},
+  year={2009},
+  publisher={SIAM}
+}
+
+@article{tibshirani2005sparsity,
+  title={Sparsity and smoothness via the fused lasso},
+  author={Tibshirani, Robert and Saunders, Michael and Rosset, Saharon and Zhu, Ji and Knight, Keith},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={67},
+  number={1},
+  pages={91--108},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+
